argocd/overlays/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - argocd.dev.vpp.eneco.com
      secretName: vpp-eneco-com-tls-certificate
  rules:
    - host: argocd.dev.vpp.eneco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
